💄 UI: Fix problems with top menu title spending too long
close ant-design/ant-design-pro#5970

close  ant-design/ant-design-pro#6032

--- a/src/TopNavHeader/index.less
+++ b/src/TopNavHeader/index.less
@@ -44,7 +44,7 @@
 
   &-logo {
     position: relative;
-    width: 165px;
+    min-width: 165px;
     height: @layout-header-height;
     overflow: hidden;
     line-height: @layout-header-height;
